package com.lab6;

public interface Run {
    public String getName();

    public double getMaxSpeed();

    public double getWeight();

    public void move();
}
