package com.lab6;

import com.lab6.Tractor;

public class TractorCrawler extends Tractor {

    public TractorCrawler(String name, double weight, double maxSpeed, String type) {
        super(name, weight, maxSpeed, type);
    }
}