package com.lab6;

import com.lab6.Tractor;

public class TractorWheeled extends Tractor {

    public TractorWheeled(String name, double weight, double maxSpeed, String type) {
        super(name, weight, maxSpeed, type);
    }
}